Updated to jdk 20